# python-ollama-example

./: .gitignore  README.md  jobs.py  jobs.yaml  main-rebel.py  main-short-example.py  main.py  modelstack.py  pyproject.toml  rag-resumes.py  sanity.py  test.py
chroma_db/: chroma.sqlite3
data/cache/: chroma_rag.json
data/test/corpus1/: Dungeons and Dragons - 5e -Spell List.docx  Rand, Ayn - ATLAS SHRUGGED.txt  Rand, Ayn - Fountainhead.txt  Shakespeare, William - Hamlet.txt  Tolkien, J R R - The Hobbit.doc  Tolkien, J R R - The Hobbit.docx
lib/: corpus.py  fileconvert.py  modelstack.py  notes.md  rag.py  splitter.py  tools.py  vectordb.py
