[project]
name = "python-ollama-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.1",
    "python-dateutil>=2.9.0",
    "chromadb>=1.3.5",
    "ruamel-yaml>=0.18.16",
    "docx2txt>=0.9",
    "pywin32>=311",
    "docx>=0.2.4",
    "python-docx>=1.2.0",
    "pypdf>=6.4.0",
]
