[project]
name = "python-ollama-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.1",
    "python-dateutil>=2.9.0",
    "chromadb>=1.3.5",
    "ruamel-yaml>=0.18.16",
    "docx2txt>=0.9",
    "pywin32>=311",
    "docx>=0.2.4",
    "python-docx>=1.2.0",
    "pypdf>=6.4.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "flagembedding>=1.3.5",
    "huggingface-hub[hf-xet]>=0.36.0",
    "torch>=2.9.0.dev",
    "torchvision>=0.20.0.dev",
    "torchaudio>=2.9.0.dev",
    "unstructured>=0.18.21",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

